<resources>
    <string name="app_name">ComposeVsXml</string>
    <string name="camera">Camera</string>
    <string name="search">Search</string>
    <string name="settings">Settings</string>
    <string name="new_group">New group</string>
    <string name="broadcast">New broadcast</string>
    <string name="devices">linked devices</string>
    <string name="starred_message">Starred message</string>
    <string name="chats_label">Chats</string>
    <string name="updates_label">Updates</string>
    <string name="communities_label">Communities</string>
    <string name="calls_label">Calls</string>
    <string name="name">Nombre %s</string>
    <string name="date">11:%s AM</string>
    <string name="all">All</string>
    <string name="unread">Unread</string>
    <string name="group">Group</string>
</resources>