<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_camera"
        android:title="@string/camera"
        android:icon="@drawable/baseline_photo_camera_24"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_search"
        android:title="@string/search"
        android:icon="@drawable/baseline_search_24"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_group"
        android:title="@string/new_group"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_broadcast"
        android:title="@string/broadcast"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_devices"
        android:title="@string/devices"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_message"
        android:title="@string/starred_message"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_settings"
        android:title="@string/settings"
        app:showAsAction="never" />
</menu>