<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/chats"
        android:enabled="true"
        android:icon="@android:drawable/sym_action_email"
        app:showAsAction="ifRoom"
        android:title="@string/chats_label"/>
    <item
        android:id="@+id/updates"
        android:enabled="true"
        android:icon="@android:drawable/ic_menu_compass"
        app:showAsAction="ifRoom"
        android:title="@string/updates_label"/>
    <item
        android:id="@+id/communities"
        android:enabled="true"
        android:icon="@android:drawable/ic_menu_gallery"
        app:showAsAction="ifRoom"
        android:title="@string/communities_label"/>
    <item
        android:id="@+id/calls"
        android:enabled="true"
        app:showAsAction="ifRoom"
        android:icon="@android:drawable/ic_menu_call"
        android:title="@string/calls_label"/>
</menu>