<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:title="XmlView" />

<<<<<<< Updated upstream
</LinearLayout>
=======
        <androidx.appcompat.widget.Toolbar
            android:id="@+id/whatsapp_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_scrollFlags="scroll|enterAlways"
            app:title="WhatsApp"
            app:titleTextAppearance="@style/Toolbar.CustomTheme"
            app:titleTextColor="@color/secondary_color" />

    </com.google.android.material.appbar.AppBarLayout>


    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.compose.ui.platform.ComposeView
                android:id="@+id/container_header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginHorizontal="10dp"
                android:gravity="center_vertical">

                <androidx.cardview.widget.CardView
                    android:id="@+id/cv_all"
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:layout_marginEnd="5dp"
                    android:tag="1"
                    app:cardCornerRadius="10dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:paddingHorizontal="10dp"
                        android:text="@string/all"
                        android:textColor="@color/primary_color"
                        android:textSize="12sp"
                        android:textStyle="bold" />

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/cv_unread"
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:layout_marginHorizontal="5dp"
                    android:tag="2"
                    app:cardCornerRadius="10dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:paddingHorizontal="10dp"
                        android:text="@string/unread"
                        android:textColor="@color/primary_color"
                        android:textSize="12sp"
                        android:textStyle="bold" />

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/cv_group"
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:layout_marginHorizontal="5dp"
                    android:tag="3"
                    app:cardCornerRadius="10dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:paddingHorizontal="10dp"
                        android:text="@string/group"
                        android:textColor="@color/primary_color"
                        android:textSize="12sp"
                        android:textStyle="bold" />

                </androidx.cardview.widget.CardView>

            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_chat_list"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingBottom="80dp"
                tools:listitem="@layout/item_chat_layout" />

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fb_new_chat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|bottom"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="80dp"
        android:backgroundTint="@color/secondary_color"
        android:contentDescription="@string/app_name"
        android:src="@drawable/baseline_add_circle_24"
        android:tint="@color/white"
        app:fabCustomSize="50dp"
        app:rippleColor="@color/white"
        app:shapeAppearanceOverlay="@style/RoundedFloatingButton" />

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:background="@color/gray"
        app:itemBackground="@color/gray"
        app:itemIconTint="@drawable/navigation_view_colored"
        app:itemTextColor="@color/black"
        app:labelVisibilityMode="labeled"
        app:menu="@menu/bottom_navigation_menu" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>
>>>>>>> Stashed changes
